--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,20 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.elit.trackerbot.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/trackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/track"/>
+
+    <TextView
+        android:id="@+id/trackTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="You still didn't track today :D"
+        android:layout_below="@+id/trackButton"/>
 </RelativeLayout>
